syntax = "proto3";

package session.v1;

option go_package = "github.com/vgeorgo/grpc-envoy-experiment/session_service_go/pkg/pb/session/v1";

service JWTService {
  rpc Check (CheckRequest) returns (Response) {};
  rpc Create (CreateRequest) returns (Response) {};
  rpc Remove (RemoveRequest) returns (Response) {};
}

message CheckRequest {}

message CreateRequest {
  string user = 1;
}

message RemoveRequest {}

message Response {
  string id = 1;
}